# url_jail

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  SECURITY.md  pyproject.toml  url_jail.pyi  url_jail_spec.md
.github/workflows/: ci.yml  release.yml
python/url_jail/: __init__.py  __init__.pyi
python/url_jail/adapters/: README.md  __init__.py  aiohttp_adapter.py  httpx_adapter.py  requests_adapter.py  urllib3_adapter.py
scripts/: pre-commit.sh
src/: blocklist.rs  error.rs  fetch.rs  lib.rs  policy_builder.rs  python.rs  safe_url.rs  validate.rs
tests/: test_adapters.py  test_async.py  test_core.py
