[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "url_jail"
version = "0.1.8"
description = "SSRF-safe URL validation for Python"
readme = "README.md"
license = { text = "MIT OR Apache-2.0" }
requires-python = ">=3.8"
keywords = ["ssrf", "security", "url", "validation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Rust",
    "Topic :: Security",
]
dependencies = []

[project.optional-dependencies]
requests = ["requests>=2.20"]
httpx = ["httpx>=0.20"]
aiohttp = ["aiohttp>=3.8"]
all = ["requests>=2.20", "httpx>=0.20", "aiohttp>=3.8"]

[tool.maturin]
features = ["python"]
python-source = "python"
# Use metadata 2.1 to avoid license-file issue with PyPI
compatibility = "manylinux2014"
